[package]
name = "testuser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tcp_diffuser = { path = "../../../tcp_diffuser", version = "0.1.0" }
p256 = {version = "0.13.2"}
rand_core = {version = "0.6.4"}
elliptic-curve = {version = "0.13.5"}
